fix z-index stacking with new header on create topic modal

--- a/modules/topics-ui/browser/less/components/modal.less
+++ b/modules/topics-ui/browser/less/components/modal.less
@@ -16,6 +16,7 @@
   height:     100%;
 
   background: @modal-wrapper-bg;
+  z-index: 1;
 }
 
 .modal__body {
